--- a/src/layouts/components/BlogCard.astro
+++ b/src/layouts/components/BlogCard.astro
@@ -31,10 +31,7 @@ const { title, image, date, author, categories } = data.data;
   </h4>
   <ul class="mb-4">
     <li class="mr-4 inline-block">
-      <a href={`/authors/${slugify(author)}`}>
-        <FaRegUserCircle className={"mr-2 -mt-1 inline-block"} />
-        {humanize(author)}
-      </a>
+
     </li>
     <li class="mr-4 inline-block">
       <FaRegFolder className={"mr-2 -mt-1 inline-block"} />
@@ -53,6 +50,6 @@ const { title, image, date, author, categories } = data.data;
     class="btn btn-outline-primary btn-sm"
     href={`/${blog_folder}/${data.slug}`}
   >
-    read more
+    Ver Más
   </a>
 </div>
